name:                athame
version:             0.1.0.0
synopsis:            Rubik's cube move simplifier
-- description:         
homepage:            https://athame.io
license:             PublicDomain
license-file:        LICENSE
author:              R. Martinho Fernandes
maintainer:          rmf@rmf.io
-- copyright:           
category:            Math
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable athame
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9, parsec >=3.1 && <3.2
  hs-source-dirs:      src
  default-language:    Haskell2010

